--- a/transmar-web/src/app/workstations/workstations-page/workstations-page.html
+++ b/transmar-web/src/app/workstations/workstations-page/workstations-page.html
@@ -1,6 +1,6 @@
 <h2>Workstations</h2>
 
-<div *ngIf="loading">Ładowanie...</div>
+<div *ngIf="loading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
 
 <table *ngIf="!loading && !error" border="1" cellpadding="6">
